[package]
name = "deylon666"
version = "0.0.1"
authors = ["yury"]
edition = "2024"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.5.2"
x86_64 = "0.14.7"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
